# ASOS

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEMO_PLAYBOOK.md  Dockerfile.sandbox  Dockerfile.sandbox-browser  Dockerfile.sandbox-common  FEATURE_STABILITY_ROADMAP.md  HANDOFF.md  HANDOVER.md  LAUNCH.md  LICENSE  Makefile  NOTICE  PR_BODY.md  README.md  SECURITY.md  TRACK_A_CHANNELS_PROVIDERS.md  TRACK_B_HARDWARE.md  TRACK_C_PERSONAS_WORKFLOWS.md  TRACK_D_ADVANCED.md  V2_PROMOTION_CHECKLIST.md  _PROPOSAL.md  docker-compose.yml  flake.nix
asos-core/: Dockerfile  pyproject.toml
asos-core/agents/: context_manager.py  genui_generator.py  identity_loader.py  learner.py  llm_provider.py  local_inference.py  multi_agent.py  orchestrator.py  proactive_engine.py  refusal_handler.py  scheduler.py  session_handoff.py  skill_generator.py  taskflow.py  tool_runner.py
asos-core/api/: server.py  state.py
asos-core/channels/: __init__.py  base.py
asos-core/cli/: main.py  setup_wizard.py
asos-core/config/: __init__.py  identity.default.yaml  loader.py  runtime.py
asos-core/demo/: __init__.py  runner.py  scenarios.py  seed.py  simulator.py
asos-core/gateway/: protocol.py
asos-core/genui/: generator.py
asos-core/hardware/: __init__.py  mesh.py  protocol.py
asos-core/identity/: workspace.py
asos-core/integrations/: __init__.py  home_assistant.py  notion.py  oauth_manager.py  spotify.py  webhook_receiver.py
asos-core/mcp/: __init__.py  __main__.py  client.py  registry.py  server.py
asos-core/memory/: __init__.py  embeddings.py  enhanced_search.py  hlc.py  ingest.py  knowledge_graph.py  store.py  sync.py
asos-core/models/: protocol.py  skill_manifest.py
asos-core/perception/: __init__.py  audio_pipeline.py  change_detector.py  fusion.py  gesture.py  scene.py  screen_loop.py  wake_word.py
asos-core/security/: __init__.py  dangerous_tools.py  docker_sandbox.py  exec_approvals.py  fetch_guard.py  sandbox_policy.py  vault.py  wasm_host.py  wasm_sandbox.py
asos-core/skills/: PLUGIN_SDK.md  base.py  executor.py  marketplace.py  package.py  registry.py
asos-core/tests/: test_browser_use.py  test_channels.py  test_code_interpreter.py  test_config.py  test_embeddings.py  test_gateway.py  test_genui.py  test_gesture.py  test_hardware.py  test_hardware_mesh.py  test_identity.py  test_integration.py  test_knowledge_graph.py  test_learner.py  test_llm_provider.py  test_mcp.py  test_mcp_full.py  test_memory.py  test_memory_ingest.py  test_orchestrator.py  test_perception.py  test_permissions_routines.py  test_protocol.py  test_safety.py  test_screen_capture.py  test_security_full.py  test_streaming.py  test_subagent.py  test_sync.py  test_taskflow.py
asos-core/voice/: gemini_realtime.py  personality.py  realtime_proxy.py  router.py
asos-core/webui/: index.html
desktop/src-tauri/: Cargo.toml  tauri.conf.json
feral-core/: Dockerfile  README.md  _version.py  pyproject.toml  version.py
feral-core/agents/: about_me.py  agent_mitosis.py  app_registry.py  baseline_engine.py  chat_sanitizer.py  coding_run.py  computer_use_driver.py  context_engine.py  context_manager.py  digital_twin.py  direct_execution.py  genui_generator.py  goal_checker.py  hybrid_genui.py  ideas_engine.py  identity_loader.py  intent_compiler.py  intent_gate.py  learner.py  llm_anthropic_shape.py  llm_failover.py  llm_provider.py  llm_reasoning.py  local_inference.py  multi_agent.py  orchestrator.py  permission_card.py  persona_loader.py  proactive_engine.py  prompt_refiner.py  refusal_handler.py  response_delivery.py  scheduler.py  self_model.py  session_handoff.py  skill_generator.py  subagent_policy.py  subagent_spawner.py  supervisor.py  taskflow.py  (+6 more)
feral-core/api/: boot_report.py  keys.py  server.py  state.py
feral-core/channels/: __init__.py  base.py  contact_store.py  feishu.py  loader.py  manifest.py  manifest_schema.json  matrix.py  push.py  signal.py  voice_call.py  zalo.py
feral-core/cli/: access_commands.py  app_commands.py  bridge_commands.py  daemon.py  grant_commands.py  install.py  key_commands.py  main.py  memory_cmd.py  publish.py  setup_wizard.py  twin_commands.py  ui_kit.py
feral-core/config/: __init__.py  identity.default.yaml  loader.py  runtime.py
feral-core/demo/: __init__.py  runner.py  seed.py  simulator.py
feral-core/gateway/: protocol.py  routing.py
feral-core/genui/: a2ui_protocol.py  app_message_schema.py  generator.py  manifest_signing.py  permissions_policy.py
feral-core/hardware/: __init__.py  command_contract.py  mesh.py  protocol.py
feral-core/identity/: workspace.py
feral-core/infra/: supervisor.py
feral-core/integrations/: __init__.py  calendar.py  email.py  email_watcher.py  google_contacts.py  google_drive.py  health_platforms.py  home_assistant.py  messaging.py  microsoft365.py  mqtt_bridge.py  notion.py  oauth_manager.py  spotify.py  tailscale.py  webhook_receiver.py
feral-core/mcp/: __init__.py  __main__.py  client.py  registry.py  server.py
feral-core/memory/: capability_registry.py  consciousness.py  context_builder.py  embeddings.py  enhanced_search.py  hlc.py  ingest.py  knowledge_graph.py  node_subdevices.py  notes_legacy.py  retriever.py  session_snapshot.py  store.py  sync.py  uploads.py  wiki.py
feral-core/models/: __init__.py  app_manifest.py  daemon_manifest.py  protocol.py  skill_manifest.py
feral-core/observability/: __init__.py  automation_metrics.py  metrics.py
feral-core/perception/: __init__.py  audio_pipeline.py  change_detector.py  fusion.py  gesture.py  location.py  scene.py  screen_loop.py  somatic.py  wake_word.py
feral-core/process/: __init__.py
feral-core/providers/: __init__.py  anthropic_provider.py  base.py  bedrock_models.json  bedrock_provider.py  catalog.py  deepseek_provider.py  fireworks_provider.py  gemini_provider.py  groq_provider.py  lmstudio_provider.py  model_catalog.json  model_classes.py  ollama_provider.py  openai_provider.py  openrouter_provider.py  recommended.py  (+1 more)
feral-registry/: .env.example  .gitignore  Dockerfile  Procfile  README.md  fly.toml  pyproject.toml
(+1503 files in other folders)
