[project]
name = "theora-brain"
version = "1.0.0"
description = "THEORA OS — Self-learning, streaming, scene-aware agentic intelligence"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "websockets>=13.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
llm = [
    "openai>=1.50.0",
]
local = [
    "llama-cpp-python>=0.3.0",
]
wasm = [
    "wasmtime>=22.0.0",
]
sync = [
    "zeroconf>=0.131.0",
]
all = [
    "openai>=1.50.0",
    "wasmtime>=22.0.0",
    "zeroconf>=0.131.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
theora = "cli.main:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
