[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "theora-asos"
version = "1.0.0"
description = "THEORA — Open-source AI agent with computer use, GenUI, voice, hardware control, and persistent memory."
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Mahmoud Omar"},
    {name = "Alpay Kasal", email = "info@theora.io"},
]
requires-python = ">=3.11"
keywords = ["agent", "ai", "genui", "voice", "hardware", "mcp", "computer-use"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "websockets>=13.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "duckduckgo-search>=6.0.0",
    "html2text>=2024.2.26",
    "pymupdf",
]

[project.optional-dependencies]
llm = [
    "openai>=1.50.0",
    "exa-py>=1.0.0",
    "numpy>=1.24.0",
    "sqlite-vec>=0.1.1",
    "pyautogui>=0.9.54",
    "Pillow>=10.0.0",
    "aiohttp>=3.9.0",
]
groq = [
    "openai>=1.50.0",
]
local = [
    "llama-cpp-python>=0.3.0",
]
wasm = [
    "wasmtime>=22.0.0",
]
sync = [
    "zeroconf>=0.131.0",
]
wake = [
    "openwakeword>=0.6.0",
    "onnxruntime>=1.16.0",
]
desktop = [
    "pyautogui>=0.9.54",
]
browser = [
    "playwright>=1.40.0",
]
all = [
    "openai>=1.50.0",
    "exa-py>=1.0.0",
    "numpy>=1.24.0",
    "sqlite-vec>=0.1.1",
    "pyautogui>=0.9.54",
    "Pillow>=10.0.0",
    "aiohttp>=3.9.0",
    "playwright>=1.40.0",
    "wasmtime>=22.0.0",
    "zeroconf>=0.131.0",
    "openwakeword>=0.6.0",
    "onnxruntime>=1.16.0",
    "rich>=13.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
theora = "cli.main:main"

[project.urls]
Homepage = "https://github.com/Spatial-AgenticOS/ASOS"
Issues = "https://github.com/Spatial-AgenticOS/ASOS/issues"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "agents*", "api*", "channels*", "cli*", "config*", "gateway*",
    "genui*", "hardware*", "identity*", "integrations*", "mcp*",
    "memory*", "models*", "perception*", "security*", "skills*",
    "voice*", "webui*", "tests*",
]

[tool.setuptools.package-data]
"skills.manifests" = ["*.json"]
"config" = ["*.yaml", "*.yml"]
"webui" = ["*.html", "*.css", "*.js", "*.svg", "*.png", "*.ico", "*.json"]
"webui.assets" = ["*.html", "*.css", "*.js", "*.svg", "*.png", "*.ico", "*.json", "*.map"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
