[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "feral-ai"
dynamic = ["version"]
description = "FERAL — Open-source AI agent with computer use, GenUI, voice, hardware control, and persistent memory."
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Mahmoud Omar"},
    {name = "Alpay Kasal", email = "info@feral.io"},
]
requires-python = ">=3.11"
keywords = ["agent", "ai", "genui", "voice", "hardware", "mcp", "computer-use"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "websockets>=13.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "duckduckgo-search>=6.0.0",
    "html2text>=2024.2.26",
    "pymupdf",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "aiohttp>=3.9.0",
    "openai>=1.50.0",
    "PyJWT>=2.8.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
llm = [
    "openai>=1.50.0",
    "exa-py>=1.0.0",
    "numpy>=1.24.0",
    "sqlite-vec>=0.1.1",
    "pyautogui>=0.9.54",
    "Pillow>=10.0.0",
    "aiohttp>=3.9.0",
    "playwright>=1.40.0",
]
groq = [
    "openai>=1.50.0",
]
local = [
    "llama-cpp-python>=0.3.0",
]
wasm = [
    "wasmtime>=22.0.0",
]
sync = [
    "zeroconf>=0.131.0",
]
discovery = [
    "zeroconf>=0.131.0",
    "qrcode[pil]>=7.4",
]
stt = [
    "faster-whisper>=1.0.0",
]
tts = [
    "piper-tts>=1.2.0",
]
wake = [
    "openwakeword>=0.6.0",
    "onnxruntime>=1.16.0",
]
desktop = [
    "pyautogui>=0.9.54",
]
browser = [
    "playwright>=1.40.0",
]
mqtt = [
    "aiomqtt>=2.0.0",
]
observability = [
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
]
all = [
    "openai>=1.50.0",
    "exa-py>=1.0.0",
    "numpy>=1.24.0",
    "sqlite-vec>=0.1.1",
    "pyautogui>=0.9.54",
    "Pillow>=10.0.0",
    "aiohttp>=3.9.0",
    "playwright>=1.40.0",
    "wasmtime>=22.0.0",
    "zeroconf>=0.131.0",
    "qrcode[pil]>=7.4",
    "openwakeword>=0.6.0",
    "onnxruntime>=1.16.0",
    "rich>=13.0.0",
    "faster-whisper>=1.0.0",
    "piper-tts>=1.2.0",
    "aiomqtt>=2.0.0",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
feral = "cli.main:main"

[project.urls]
Homepage = "https://github.com/FERAL-AI/FERAL-AI"
Issues = "https://github.com/FERAL-AI/FERAL-AI/issues"

[tool.setuptools.dynamic]
version = {attr = "_version.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = [
    "agents*", "api*", "channels*", "cli*", "config*", "gateway*",
    "genui*", "hardware*", "identity*", "infra*", "integrations*",
    "mcp*", "memory*", "models*", "observability*", "perception*",
    "security*", "services*", "skills*", "voice*", "webui*", "tests*",
]

[tool.setuptools.package-data]
"skills.manifests" = ["*.json"]
"config" = ["*.yaml", "*.yml"]
"webui" = ["*.html", "*.css", "*.js", "*.svg", "*.png", "*.ico", "*.json"]
"webui.assets" = ["*.html", "*.css", "*.js", "*.svg", "*.png", "*.ico", "*.json", "*.map"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = ["no_auto_feral_home: skip the autouse FERAL_HOME isolation fixture"]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "*/webui/*", "setup.py"]

[tool.coverage.report]
fail_under = 48
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "raise NotImplementedError",
]
