[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "feral-ai"
version = "2026.5.33"
description = "FERAL — Open-source AI agent with computer use, GenUI, voice, hardware control, and persistent memory."
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Mahmoud Omar"},
    {name = "Alpay Kasal", email = "info@feral.io"},
]
requires-python = ">=3.11"
keywords = ["agent", "ai", "genui", "voice", "hardware", "mcp", "computer-use"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115.0",
    # PR 10: chat composer attachments + wiki PDF ingestion both use
    # multipart/form-data, which FastAPI delegates to python-multipart.
    # Without this, /api/uploads and /api/wiki/ingest/pdf raise a
    # ``RuntimeError: Form data requires "python-multipart"`` at first
    # use — surfacing the dependency at install time avoids that.
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "websockets>=13.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    # CLI UX overhaul: arrow-key selects + masked-character paste in
    # `feral setup`, `feral install`, `feral key`, and `feral access`.
    # InquirerPy wraps prompt_toolkit to render selects, fuzzy
    # filters, and a per-character masked secret input. Falls back to
    # plain `input` / `getpass` when stdin/stdout is non-interactive.
    "InquirerPy>=0.3.4",
    "duckduckgo-search>=6.0.0",
    "html2text>=2024.2.26",
    "pymupdf",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "aiohttp>=3.9.0",
    "openai>=1.50.0",
    "PyJWT>=2.8.0",
    "prometheus-client>=0.20",
    # v2026.5.33 Option C: MemoryStore is async-native. aiosqlite is the
    # async wrapper around the stdlib sqlite3 driver — it runs SQLite
    # calls on a single dedicated thread per connection so the asyncio
    # event loop never blocks on a query. Every FERAL memory path
    # (FastAPI handlers, orchestrator, sync scheduler, decay sweeper)
    # awaits MemoryStore directly without thread-pool bridging.
    "aiosqlite>=0.20.0",
    "cryptography>=41.0.0",
    "pynacl>=1.5.0",
    # W9: vault encryption-at-rest. The OS keychain is now a hard
    # requirement of the security path — `keyring` reads/writes the
    # 32-byte ChaCha20-Poly1305 master key from
    # macOS Keychain / Linux Secret Service / Windows Credential Manager.
    "keyring>=25.0",
    # W9: pairing-token hashing. argon2id is the primary KDF; bcrypt is
    # the documented fallback when argon2-cffi is genuinely unavailable
    # on a given platform (see security/device_pairing.py).
    "argon2-cffi>=23.1",
]

[project.optional-dependencies]
llm = [
    "openai>=1.50.0",
    "exa-py>=1.0.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "aiohttp>=3.9.0",
]
vec = [
    "sqlite-vec>=0.1.1",
]
memory-chroma = [
    "chromadb>=0.5.0",
]
memory-qdrant = [
    "qdrant-client>=1.11.0",
]
groq = [
    "openai>=1.50.0",
]
local = [
    "llama-cpp-python>=0.3.0",
]
wasm = [
    "wasmtime>=22.0.0",
]
sync = [
    "zeroconf>=0.131.0",
]
discovery = [
    "zeroconf>=0.131.0",
    "qrcode[pil]>=7.4",
]
stt = [
    "faster-whisper>=1.0.0",
]
tts = [
    "piper-tts>=1.2.0",
]
wake = [
    "openwakeword>=0.6.0",
    "onnxruntime>=1.16.0",
]
desktop = [
    "pyautogui>=0.9.54",
]
browser = [
    "playwright>=1.40.0",
]
mqtt = [
    "aiomqtt>=2.0.0",
]
observability = [
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
    # W13: Prometheus exposition for /metrics + named registry. The
    # OTel SDK pulls prometheus_client transitively in some installs but
    # not all wheels, so it's pinned here so `pip install feral-ai[observability]`
    # always provides the registry the dashboard + alerts target.
    "prometheus-client>=0.20",
]
# Track A provider + channel extras (added in 2026.4.18).
# Together, OpenRouter, Fireworks all speak OpenAI-compatible JSON — the
# `openai` client is already a core dep, but the extras here are named so
# users discover them via `pip install feral-ai[together]` etc.
together = [
    "openai>=1.50.0",
]
openrouter = [
    "openai>=1.50.0",
]
fireworks = [
    "openai>=1.50.0",
]
bedrock = [
    "boto3>=1.34.0",
]
# Channel extras are opt-in because each ships heavyweight deps.
channel-matrix = [
    "matrix-nio>=0.24.0",
]
channel-signal = [
    # Pick ONE backend — signald (JSON socket, cleaner) vs signal-cli-rest-api
    # (subprocess). The signal.py stub defers the choice until the
    # follow-up PR lands; no hard dep is added here yet.
]
channel-voice-call = [
    "twilio>=9.0.0",
]
channel-feishu = [
    "lark-oapi>=1.4.0",
]
channel-zalo = [
    # Zalo OA REST API is plain HTTPS over httpx (already a core dep).
]
all = [
    "openai>=1.50.0",
    "exa-py>=1.0.0",
    "numpy>=1.24.0",
    "pyautogui>=0.9.54",
    "Pillow>=10.0.0",
    "aiohttp>=3.9.0",
    "playwright>=1.40.0",
    "wasmtime>=22.0.0",
    "zeroconf>=0.131.0",
    "qrcode[pil]>=7.4",
    "onnxruntime>=1.16.0",
    "rich>=13.0.0",
    "faster-whisper>=1.0.0",
    "piper-tts>=1.2.0",
    "aiomqtt>=2.0.0",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
    "prometheus-client>=0.20",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    # W9: freezegun is used by tests/test_pairing_hash.py
    # (TestVerify.test_freezegun_simulates_ttl_passage and
    # TestVerify.test_successful_verify_slides_window) to drive the
    # sliding-TTL window deterministically without sleeping.
    "freezegun>=1.4.0",
]

# Optional demo data + simulators. NEVER installed by default —
# `pip install feral-ai` ships with zero synthetic-biometric code.
# Install via `pip install feral-ai[demo]` (or directly:
# `pip install feral-demo-data`) to get scripted scenarios + the
# wristband / smart-home simulators for development.
demo = [
    "feral-demo-data>=0.1.0",
]

[project.scripts]
feral = "cli.main:main"

[project.urls]
Homepage = "https://github.com/FERAL-AI/FERAL-AI"
Issues = "https://github.com/FERAL-AI/FERAL-AI/issues"

[tool.setuptools]
py-modules = ["version"]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "agents*", "api*", "channels*", "cli*", "config*", "gateway*",
    "genui*", "hardware*", "identity*", "infra*", "integrations*",
    "mcp*", "memory*", "models*", "observability*", "perception*",
    "providers*", "security*", "services*", "skills*", "voice*",
    "webui*", "webui_v2*",
    # audit-r9 brief #08: `workflows` is a sibling top-level package
    # (data-only, holds first-party workflow-pack JSONs). Was omitted
    # from the include list, so it never made it into the wheel and
    # `default_workflow_packs_dir()` resolved to a non-existent path
    # at runtime. The brain logged "Workflow-pack directory not found
    # (skipping)" and the 10 curated packs were silently absent from
    # `/api/workflow-packs`.
    "workflows*",
]
# `tests*` was previously included here, which shipped the entire
# pytest suite inside the wheel. That bloated the install and risked
# top-level name collisions on `tests` (a common module name). Drop
# them from the published artifact in 2026.5.13.
exclude = ["tests*"]

[tool.setuptools.package-data]
"skills.manifests" = ["*.json"]
"config" = ["*.yaml", "*.yml"]
# audit-r9 brief #08: ship the first-party persona + workflow-pack
# JSON manifests in the wheel. Without these entries, `pip install
# feral-ai` produced an installation where `default_personas_dir()`
# and `default_workflow_packs_dir()` pointed to non-existent paths
# (the loaders politely skipped, hiding the missing data behind an
# INFO log). The dev tree had the JSONs all along — they just never
# made it into the published wheel.
"agents.personas" = ["*.json", "*.md"]
"workflows" = ["*.json", "*.md"]
# v2026.5.29 — `*.webmanifest` and `*.txt` must be globbed in too.
# Pre-fix the wheel shipped `manifest.webmanifest` only when its name
# matched another glob (it didn't), so `pip install feral-ai` left the
# brain returning 404 on `/v2/manifest.webmanifest` while local dev
# checkouts had the file and looked fine.
"webui" = ["*.html", "*.css", "*.js", "*.svg", "*.png", "*.ico", "*.json", "*.webmanifest", "*.txt"]
"webui.assets" = ["*.html", "*.css", "*.js", "*.svg", "*.png", "*.ico", "*.json", "*.map"]
# v2 ambient-OS bundle — the wheel MUST carry these or pip-installed
# users fall back to the v1 UI. See feral-core/api/server.py::_webui_v2_dir.
"webui_v2" = ["*.html", "*.css", "*.js", "*.svg", "*.png", "*.ico", "*.json", "*.webmanifest", "*.txt"]
"webui_v2.assets" = ["*.html", "*.css", "*.js", "*.svg", "*.png", "*.ico", "*.json", "*.map"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "no_auto_feral_home: skip the autouse FERAL_HOME isolation fixture",
    "chaos: federated-sync chaos / recovery tests (W11, roadmap §3.3 #1)",    "soak: long-duration soak test (gated behind --runsoak); see W12 / roadmap §3.4 #3-4",
    "live: round-trip against live external APIs (OpenAI etc); gated by FERAL_LIVE_TESTS=1 + API key env vars; never run in CI",
]
# Coverage is on by default for every `pytest` run. The previous setup
# configured [tool.coverage.*] but never forced `--cov`, so pytest-cov
# was installed and dormant. Overridable: `pytest --no-cov` to skip
# (e.g. when profiling or debugging).
addopts = "--cov=. --cov-report=term-missing:skip-covered --cov-fail-under=50"

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "*/webui/*",
    "*/webui_v2/*",
    "setup.py",
    "demo/*",
    "docs/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
# Raised from 48 → 50 immediately (this commit). Ratchet lives in
# docs/coverage.md. Subsequent commits will keep pushing the floor up
# as tests backfill.
fail_under = 50
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "raise NotImplementedError",
]
